--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>technology.tabula</groupId>
-    <artifactId>tabula</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <groupId>com.github.mppjuro</groupId>
+    <artifactId>tabula-java-android</artifactId>
+    <version>1.0.7</version>
     <name>Tabula</name>
     <description>Extract tables from PDF files</description>
     <url>http://github.com/tabulapdf/tabula-java</url>
