--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+        <repository>
             <id>snapshots</id>
             <url>https://repository.apache.org/content/repositories/snapshots/</url>
             <releases>
@@ -44,6 +48,10 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+            <repository>
+                <id>jcenter</id>
+                <url>https://jcenter.bintray.com/</url>
+            </repository>
     </repositories>
 
     <scm>
@@ -126,26 +134,6 @@
               </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                        <configuration>
-                            <gpgArguments>
-                                <arg>--pinentry-mode</arg>
-                                <arg>loopback</arg>
-                            </gpgArguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
@@ -183,6 +171,16 @@
                 <configuration>
                     <downloadSources>true</downloadSources>
                     <downloadJavadocs>true</downloadJavadocs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.simpligility.maven.plugins</groupId>
+                <artifactId>android-maven-plugin</artifactId>
+                <version>4.6.0</version>
+                <configuration>
+                    <sdk>
+                        <platform>35</platform>
+                    </sdk>
                 </configuration>
             </plugin>
         </plugins>
@@ -243,6 +241,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.tom-roush</groupId>
+            <artifactId>pdfbox-android</artifactId>
+            <version>2.0.27.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
             <version>1.20.0</version>
@@ -258,12 +261,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.13</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>3.0.3</version>
         </dependency>
 
         <dependency>
@@ -319,6 +316,14 @@
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>jbig2-imageio</artifactId>
             <version>3.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>android</groupId>
+            <artifactId>android</artifactId>
+            <version>35.0.0</version>
+            <scope>system</scope>
+            <systemPath>C:/Users/PJURO/AppData/Local/Android/Sdk/platforms/android-35/android.jar</systemPath>
         </dependency>
     </dependencies>
 
